--- a/styles.css
+++ b/styles.css
@@ -200,6 +200,32 @@ a {
     background-color: #555;
 }
 
+@media screen and (max-width: 767px) {
+
+    nav ul li {
+        display: block;
+        margin: 0;
+        
+    }
+    nav ul li a {
+        background-color: yellow;
+        color: black;
+        width: 100%;
+        display: block;
+        border-bottom: 1px solid black;
+        padding: 5px;
+    }
+    .product-item {
+        flex: 1 1 45%;
+    }
+    
+}
+@media screen and (max-width: 550px) {
+    .product-item {
+        flex: 1 1 100%;
+    }
+}
+
 /* Collection */
 .collections {
     padding: 2em;
